--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "prismjs": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-intl": "^2.9.0"
   },
   "devDependencies": {
     "prettier": "^1.17.1"
